methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: type mismatch;
 found   : Unit
 required: Int
  if (versLavant==true) { for (i<-1 to nbPas) {
                                ^MethodsArgs:6: error: type mismatch;
 found   : Unit
 required: Int
  }else { for (i<-1 to nbPas) {
                ^